--- a/src/main/resources/templates/fragments/debatersChat.html
+++ b/src/main/resources/templates/fragments/debatersChat.html
@@ -23,6 +23,11 @@
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
 
+<link rel="stylesheet" type="text/css"
+	href="js/jquery.datetimepicker.css" />
+<script src="js/jquery.js"></script>
+<script src="js/jquery.datetimepicker.js"></script>
+
 <style type="text/css"></style>
 
 </head>
@@ -35,7 +40,11 @@
 			<div class="text-center">
 				<div>
 					<h3>До начала дебат осталось</h3>
-					<h3 th:id="demo"></h3>
+					<h3 th:id="toTimerOne" th:text="${toTimerOne}"></h3>
+				</div>
+				<div>
+					<h3>таймер</h3>
+					<h3 th:id="timeIsComplete" th:text="${timeIsComplete}"></h3>
 				</div>
 
 				<div class="container opponents">
@@ -48,6 +57,12 @@
 								class="rounded-circle " alt="Opponent" width="60" height="60">
 							</a>
 						</div>
+<!-- 						<div class="opponent-image ml-4">
+							<a class="ml-4" href="#"> <img
+								th:src="${'~/resources/images/users/' + firstSideUser.userImage}"
+								class="rounded-circle " alt="Opponent" width="60" height="60">
+							</a>
+						</div> -->
 
 						<p class="member-name h5">
 							<span th:text="${firstSideUser.login}"> </span>
@@ -66,6 +81,10 @@
 							th:src="${'../images/users/' + secondSideUser.userImage}"
 							class="rounded-circle " alt="Opponent" width="60" height="60">
 						</a>
+<!-- 						<a href="#"> <img
+							th:src="${'../resources/images/users/' + secondSideUser.userImage}"
+							class="rounded-circle " alt="Opponent" width="60" height="60">
+						</a> -->
 
 						<p class="member-name h5">
 							<span th:text="${secondSideUser.login}">
@@ -84,12 +103,107 @@
 					<div id="secondPosition">0</div>
 
 				</div>
+				<div>
+					<h6>Время на написание сообщения</h6>
+					<h6 th:id="toTimerTwo" style="color: red" th:text="${toTimerTwo}"></h6>
+					<!-- <script type="text/javascript">
+							setTimeout("window.location.reload()", 10000)
+						</script> -->
+					<!-- Обратный отсчет времени -->
+					<script>
+						// Set the date we're counting down to
+						var countDownDate2 = new Date(document
+								.getElementById("toTimerTwo").innerHTML).getTime();
+
+						// Update the count down every 1 second
+						var x = setInterval(
+								function() {
+					var сomplete = document.getElementById("timeIsComplete");
+									// Get todays date and time
+									var now2 = new Date().getTime();
+
+									// Find the distance between now an the count down date
+									var distance2 = countDownDate2 - now2;
+
+									// Time calculations for days, hours, minutes and seconds
+									var days2 = Math.floor(distance2
+											/ (1000 * 60 * 60 * 24));
+									var hours2 = Math
+											.floor((distance2 % (1000 * 60 * 60 * 24))
+													/ (1000 * 60 * 60));
+									var minutes2 = Math
+											.floor((distance2 % (1000 * 60 * 60))
+													/ (1000 * 60));
+									var seconds2 = Math
+											.floor((distance2 % (1000 * 60)) / 1000);
+
+									// Output the result in an element with id="demo"
+									document.getElementById("toTimerTwo").innerHTML = days2
+											+ "д "
+											+ hours2
+											+ "ч "
+											+ minutes2
+											+ "мин " + seconds2 + "с ";
+
+									// If the count down is over, write some text 
+									if (distance2 < 0) {
+										clearInterval(x);
+										document.getElementById("toTimerTwo").innerHTML = "Время на написание сообщение истекло";
+										сomplete = false;
+									}
+								}, 1000);
+					</script>
+					<!-- 					Обратный отсчет времени
+					<script>
+						// Set the date we're counting down to
+						var countDownDate1 = new Date("Jul 16, 2019 20:43:25")
+								.getTime();
+
+						// Update the count down every 1 second
+						var x = setInterval(
+								function() {
+
+									// Get todays date and time
+									var now = new Date().getTime();
+
+									// Find the distance between now an the count down date
+									var distance = countDownDate1 - now;
+
+									// Time calculations for days, hours, minutes and seconds
+									var days = Math.floor(distance
+											/ (1000 * 60 * 60 * 24));
+									var hours = Math
+											.floor((distance % (1000 * 60 * 60 * 24))
+													/ (1000 * 60 * 60));
+									var minutes = Math
+											.floor((distance % (1000 * 60 * 60))
+													/ (1000 * 60));
+									var seconds = Math
+											.floor((distance % (1000 * 60)) / 1000);
+
+									// Output the result in an element with id="demo"
+									document.getElementById("demo1").innerHTML = days
+											+ "д "
+											+ hours
+											+ "ч "
+											+ minutes
+											+ "мин " + seconds + "с ";
+
+									// If the count down is over, write some text 
+									if (distance < 0) {
+										clearInterval(x);
+										document.getElementById("demo1").innerHTML = "Дебаты начались";
+									}
+								}, 1000);
+					</script> -->
+				<!-- </div> -->
 
 				<!-- Обратный отсчет времени -->
+				<!-- Таймер отсчета до начала дебат -->
 				<script>
 					// Set the date we're counting down to
-					var countDownDate = new Date("Jul 16, 2019 20:43:25")
-							.getTime();
+					var countDownDate = new Date(document
+							.getElementById("toTimerOne").innerHTML).getTime();
 
 					// Update the count down every 1 second
 					var x = setInterval(
@@ -114,21 +228,20 @@
 										.floor((distance % (1000 * 60)) / 1000);
 
 								// Output the result in an element with id="demo"
-								document.getElementById("demo").innerHTML = days
-										+ "д "
-										+ hours
-										+ "ч "
-										+ minutes
+								document.getElementById("toTimerOne").innerHTML = days
+										+ "д " + hours
+										+ "ч " + minutes
 										+ "мин " + seconds + "с ";
 
 								// If the count down is over, write some text 
 								if (distance < 0) {
 									clearInterval(x);
-									document.getElementById("demo").innerHTML = "Дебаты начались";
+									document.getElementById("toTimerOne").innerHTML = "Дебаты начинаются";
 								}
 							}, 1000);
 				</script>
 
+			</div>
 			</div>
 
 			<div class="container chat-field for-members clearfix">
@@ -183,6 +296,7 @@
 								th:object="${lobby}" id="confirm-surrender"
 								class="btn btn-primary" data-dismiss="modal">Я сдаюсь</button>
 						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -193,4 +307,3 @@
 
 </body>
 </html>
-
