--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
     		link.href = '#';
 
     		var user_picture = document.createElement('img');
-    		user_picture.src = '/images/users/10.jpg';
+    		user_picture.src = '/resources/images/users/10.jpg';
     		user_picture.classList.add('img-thumbnail');
     		user_picture.classList.add('commentator');
     		user_picture.alt = 'Spectator';
