--- a/src/main/resources/templates/timer.html
+++ b/src/main/resources/templates/timer.html
@@ -5,11 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-p {
+/* p {
 	text-align: center;
 	font-size: 60px;
 	margin-top: 0px;
-}
+} */
 </style>
 <title>Таймер</title>
 <link rel="stylesheet"
@@ -31,24 +31,25 @@ p {
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
 
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script
+<!-- <script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+<!-- <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet"
-	href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
-<script
+	href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"> -->
+<!-- <script
 	src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-<script src="/js/datatable.js"></script>
+<script src="/js/datatable.js"></script> -->
 </head>
-<body onload="myFunction()" style="margin: 0;">
+<body >
+<!-- <body onload="myFunction()" style="margin: 0;"> -->
 
-	<link rel="stylesheet" href="/css/timer.css">
+	<!-- <link rel="stylesheet" href="/css/timer.css"> -->
 	<div style="height: 900px" th:fragment="content">
 		<h4>Оставшееся время для тезиса:</h4>
 
 <!-- Круглая иконка загрузки -->
-		<div id="loader"></div>
+		<!-- <div id="loader"></div> -->
 		
 <!-- Обратный отсчет времени -->
 		<p id="demo"></p>
@@ -56,7 +57,7 @@ p {
 		
 <!-- Круглая иконка загрузки -->		
 
-		<div style="display: none;" id="myDiv" class="animate-bottom">
+		<!-- <div style="display: none;" id="myDiv" class="animate-bottom">
 			<h2>Внимание!</h2>
 			<p>Время отведенное для написания тезиса истекло.</p>
 		</div>
@@ -73,7 +74,7 @@ p {
 				document.getElementById("myDiv").style.display = "block";
 			}
 		</script>
-
+ -->
 
 
 <!-- Обратный отсчет времени -->		
