--- a/src/main/resources/templates/fragments/debateSpectatorsChat.html
+++ b/src/main/resources/templates/fragments/debateSpectatorsChat.html
@@ -14,115 +14,128 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
+
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
 	crossorigin="anonymous"></script>
+
 <script
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
+
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet"
+	href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+<script
+	src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+<script src="/js/datatable.js"></script>
 
 <style type="text/css"></style>
 
 </head>
 <body>
 
-<div style="height: 900px" th:fragment="spectatorsChat">
-	
-	<div class="container main-field">
+	<div style="height: 900px" th:fragment="spectatorsChat">
 
-		<div class="container chat-field for-commentators clearfix">
-			
-			<div class="clearfix">
+		<div class="container main-field">
 
-				<div class="spectator-image">
-						<a href="#">
-							<img src="/images/users/7.jpg" class="img-thumbnail commentator" alt="Spectator">
+			<div class="container chat-field for-commentators clearfix">
+
+				<div class="clearfix">
+
+					<div class="spectator-image">
+						<a href="#"> <img src="/images/users/7.jpg"
+							class="img-thumbnail commentator" alt="Spectator">
 						</a>
-				</div>
+					</div>
 
-				<div class="message of-spectators of-others rounded">
-					<p class="commentator-name h6">Зритель 1</p>
-					<p class="argument h6">Блин, какие скучные дебаты((</p>
-					<p class="create-date">13:07</p>
-				</div>
+					<div class="message of-spectators of-others rounded">
+						<p class="commentator-name h6">Зритель 1</p>
+						<p class="argument h6">Блин, какие скучные дебаты((</p>
+						<p class="create-date">13:07</p>
+					</div>
 
-			</div>
-А
-			<div class="clearfix">
-
-				<div class="spectator-image">
-						<a href="#">
-							<img src="/images/users/2.jpg" class="img-thumbnail commentator" alt="Spectator">
-						</a>
-				</div>
-
-				<div class="message of-spectators of-others rounded">
-					<p class="commentator-name h6">Зритель 2</p>
-					<p class="argument h6">Неплохой аргумент</p>
-					<p class="create-date">13:07</p>
-				</div>
-
-			</div>
-
-			<div class="clearfix">
-
-				<div class="spectator-image">
-						<a href="#">
-							<img src="/images/users/10.jpg" class="img-thumbnail commentator" alt="Spectator">
-						</a>
-				</div>
-
-				<div class="message of-spectators of-mine-as-commentator rounded">
-					<p class="commentator-name h6">Я</p>
-					<p class="argument h6">Пруфы будут???</p>
-					<p class="create-date">13:08</p>
 				</div>
 				
-			</div>
+				<div class="clearfix">
 
-			<div class="clearfix">
-
-				<div class="spectator-image">
-						<a href="#">
-							<img src="/images/users/9.jpg" class="img-thumbnail commentator" alt="Spectator">
+					<div class="spectator-image">
+						<a href="#"> <img src="/images/users/2.jpg"
+							class="img-thumbnail commentator" alt="Spectator">
 						</a>
+					</div>
+
+					<div class="message of-spectators of-others rounded">
+						<p class="commentator-name h6">Зритель 2</p>
+						<p class="argument h6">Неплохой аргумент</p>
+						<p class="create-date">13:07</p>
+					</div>
+
 				</div>
 
-				<div class="message of-spectators of-others rounded">
-					<p class="commentator-name h6">Зритель 3</p>
-					<p class="argument h6">Левый несёт чушь</p>
-					<p class="create-date">13:09</p>
-				</div>
+				<div class="clearfix">
 
-			</div>
-
-			<div class="clearfix">
-
-				<div class="spectator-image">
-						<a href="#">
-							<img src="/images/users/4.jpg" class="img-thumbnail commentator" alt="Spectator">
+					<div class="spectator-image">
+						<a href="#"> <img src="~/images/users/10.jpg"
+							class="img-thumbnail commentator" alt="Spectator">
 						</a>
+					</div>
+
+					<div class="message of-spectators of-mine-as-commentator rounded">
+						<p class="commentator-name h6">Я</p>
+						<p class="argument h6">Пруфы будут???</p>
+						<p class="create-date">13:08</p>
+					</div>
+
 				</div>
 
-				<div class="message of-spectators of-others rounded">
-					<p class="commentator-name h6">Зритель 4</p>
-					<p class="argument h6">Думаю, как раз он и выйграет</p>
-					<p class="create-date">13:11</p>
+				<div class="clearfix">
+
+					<div class="spectator-image">
+						<a href="#"> <img src="/images/users/9.jpg"
+							class="img-thumbnail commentator" alt="Spectator">
+						</a>
+					</div>
+
+					<div class="message of-spectators of-others rounded">
+						<p class="commentator-name h6">Зритель 3</p>
+						<p class="argument h6">Левый несёт чушь</p>
+						<p class="create-date">13:09</p>
+					</div>
+
+				</div>
+
+				<div class="clearfix">
+
+					<div class="spectator-image">
+						<a href="#"> <img src="/images/users/4.jpg"
+							class="img-thumbnail commentator" alt="Spectator">
+						</a>
+					</div>
+
+					<div class="message of-spectators of-others rounded">
+						<p class="commentator-name h6">Зритель 4</p>
+						<p class="argument h6">Думаю, как раз он и выйграет</p>
+						<p class="create-date">13:11</p>
+					</div>
+
 				</div>
 
 			</div>
 
-		</div>
+			<div class="container commentary-label">
+				<input type="text" id="commentator-message" class="my-argument"
+					placeholder="Напишите свой комментарий...">
+			</div>
 
-		<div class="container commentary-label">
-			<input type="text" id="commentator-message" class="my-argument" placeholder="Напишите свой комментарий...">
 		</div>
 
 	</div>
-	
-</div>
 
 </body>
 </html>
