--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,6 +18,22 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<script type="text/javascript">
+	function doAjax() {
+		$.ajax({
+			url : 'checkStrength',
+			data : ({
+				password : $('#password').val()
+			}),
+			success : function(data) {
+				$('#strengthValue').html(data);
+			}
+		});
+	}
+</script>
 </head>
 <body class="container d-flex justify-content-center h-100 align-items-center" >
 <div class="card" style="max-height:500px; width:400px">
@@ -34,10 +50,21 @@
 						aria-label="Username" name="login" aria-describedby="basic-addon1">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Пароль</label> <input
+					<label for="password">Пароль</label> <input
 						type="password" class="form-control" name="password"
-						id="exampleInputPassword1" placeholder="Password">
+						id="password" placeholder="Password" onkeyup="doAjax()"> 
+						<span style="float: right" id="strengthValue"> </span>
 				</div>
+				
+				<!-- <form:label path="password">
+				<spring:message code="password" />
+			</form:label>
+			<form:password path="password" onkeyup="doAjax()"/>
+			<form:errors path="password" cssClass="error" />
+				<span style="float: right" id="strengthValue"> 
+			</span> -->
+			
+			
 				<div class="form-group">
 				<label for="image">Картинка темы</label>
 				<div class="custom-file">
