--- a/src/main/resources/templates/subthemes.html
+++ b/src/main/resources/templates/subthemes.html
@@ -40,7 +40,7 @@
 			<div class="card" th:each="themes : ${themesTempary}">
 
 				<div class="text-center">
-					<img th:src="@{${'../images/'+themes.backgroundImage}}"
+					<img th:src="@{${'~/resources/images/'+themes.backgroundImage}}"
 						alt="Картинка" class="img-thumbnail">
 				</div>
 
