--- a/src/main/resources/templates/fragments/debatersChat.html
+++ b/src/main/resources/templates/fragments/debatersChat.html
@@ -99,10 +99,13 @@
 
 				<div class="table-of-votes">
 
-					<div id="firstPosition">0</div>
-					<div id="secondPosition">0</div>
-
+					<div id="firstPosition" class="rounded h3" data-toggle="modal"
+					 data-target="#exampleModalForVotesFirstPosition">0</div>
+					<div id="secondPosition" class="rounded h3" data-toggle="modal"
+					 data-target="#exampleModalForVotesSecondPosition">0</div>			
+				
 				</div>
+				
 				<div>
 					<h6>Время на написание сообщения</h6>
 					<h6 th:id="toTimerTwo" style="color: red" th:text="${toTimerTwo}"></h6>
@@ -274,6 +277,58 @@
 			</div>
 
 			<!-- Modal -->
+			
+			<!-- Modal For Votes First Position -->
+			<div class="modal fade" id="exampleModalForVotesFirstPosition" tabindex="-1" role="dialog"
+				aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">Вы уверены в своем выборе?</h5>
+							<button type="button" class="close" data-dismiss="modal"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">Вы отдаете голос за <span th:text="${firstSideUser.login}"> </span>. Отдавая голос за 
+						<span th:text="${firstSideUser.login}"></span> вы не сможете больше голосовать в данных дебатах.</div>
+						<div class="modal-footer">
+							<button type="button" th:action="@{/debatersChat}"
+								th:object="${lobby}" id="vote-exampleModalForVotesFirstPosition"
+								class="btn btn-primary" data-dismiss="modal">Я уверен</button>
+							<button type="submit" id="cancel" class="btn btn-secondary"
+								data-dismiss="modal">Я еще подумаю</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			
+			<!-- Modal For Votes Second Position -->
+			<div class="modal fade" id="exampleModalForVotesSecondPosition" tabindex="-1" role="dialog"
+				aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">Вы уверены в своем выборе?</h5>
+							<button type="button" class="close" data-dismiss="modal"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">Вы отдаете голос за <span th:text="${secondSideUser.login}"> </span>. Отдавая голос за 
+						<span th:text="${secondSideUser.login}"></span> вы не сможете больше голосовать в данных дебатах.</div>
+						<div class="modal-footer">
+							<button type="button" th:action="@{/debatersChat}"
+								th:object="${lobby}" id="vote-exampleModalForVotesSecondPosition"
+								class="btn btn-primary" data-dismiss="modal">Я уверен</button>
+							<button type="submit" id="cancel" class="btn btn-secondary"
+								data-dismiss="modal">Я еще подумаю</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
 				aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog" role="document">
